--- a/styles/styles.css
+++ b/styles/styles.css
@@ -74,3 +74,40 @@ body{
 
 /*MENU*/
 
+nav{
+    display: block;
+    width: 100%;
+    height: 50px;
+    background-color: #333333;
+}
+
+nav ul{
+    list-style: none;
+}
+
+nav ul li{
+    float: left;
+    padding: 10px;
+    transition: all 200ms;
+    cursor: pointer;
+}
+
+nav ul li:hover{
+    float: left;
+    padding: 10px;
+   
+    background-color: #555151;
+}
+
+nav ul > li > a{
+    font-family: verdana;
+    line-height: 30px;
+    font-size: 18px;
+    letter-spacing: 1px;
+    color: white;
+    text-decoration: none;
+    padding-left: 20px;
+    padding-right: 20px;  
+}
+
+/*ARTICULOS*/
