--- a/styles/styles.css
+++ b/styles/styles.css
@@ -111,3 +111,68 @@ nav ul > li > a{
 }
 
 /*ARTICULOS*/
+
+#content{
+    margin-top: 30px;
+}
+
+#posts{
+    display: block;
+    
+    width: 65%;
+}
+
+.post{
+    position: relative;
+    margin-top: 10px;
+}
+
+.post h2{
+    font-family: arial;
+    font-size: 24px;
+    color: #333;
+    padding-left: 10px;
+}
+
+.post span{
+    font-family: arial;
+    font-size: 16px;
+    padding-left: 10px;
+
+    color: rgb(92, 92, 92);
+}
+
+.post p{
+    font-size:18px;
+    margin-top:10px;
+    padding: 10px;
+    color: #222;
+}
+
+.badget{
+    display: block;
+    position: absolute;
+    padding: 10px;
+    background-color: rgb(6, 117, 6);
+    font-family: arial;
+    font-size: 12px;
+     
+    border-radius: 150px;
+    width: auto;
+    color: white;
+    height: 10px;
+    line-height: 10px;
+    border: 1px solid  rgb(3, 77, 3);
+    right: 5%;
+    top:5px;
+    cursor: pointer;
+}
+
+.badget label{
+    cursor: pointer;
+}
+
+.badget:hover{
+    background: rgb(7, 133, 7);
+    text-shadow: 0px 0px 2px whitesmoke;
+}
