--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    background: url(/proyecto-js/img/img/hojas.jpg);
+    background: url(../img/img/hojas.jpg);
     background-attachment: fixed;
 }
 
@@ -96,13 +96,13 @@ nav ul li:hover{
     float: left;
     padding: 10px;
    
-    background-color: #555151;
+    background-color: #20613D;
 }
 
 nav ul > li > a{
     font-family: verdana;
     line-height: 30px;
-    font-size: 18px;
+    font-size: 16px;
     letter-spacing: 1px;
     color: white;
     text-decoration: none;
@@ -113,13 +113,16 @@ nav ul > li > a{
 /*ARTICULOS*/
 
 #content{
+    display: block;
+    position: relative;
     margin-top: 30px;
 }
 
 #posts{
     display: block;
-    
+    float: left;
     width: 65%;
+
 }
 
 .post{
@@ -147,6 +150,7 @@ nav ul > li > a{
     margin-top:10px;
     padding: 10px;
     color: #222;
+    text-align: justify;
 }
 
 .badget{
@@ -157,7 +161,7 @@ nav ul > li > a{
     font-family: arial;
     font-size: 12px;
      
-    border-radius: 150px;
+    border-radius: 10px;
     width: auto;
     color: white;
     height: 10px;
@@ -170,9 +174,101 @@ nav ul > li > a{
 
 .badget label{
     cursor: pointer;
+    transition: all 200ms;
 }
 
 .badget:hover{
-    background: rgb(7, 133, 7);
+    background: #222;
     text-shadow: 0px 0px 2px whitesmoke;
+}
+
+/*Barra lateral*/
+ #sidebar{
+    display: block;
+    font-family: Arial, Helvetica, sans-serif;
+    float: right;
+    width:31%;
+}
+
+#about h4{
+    margin-top: 50px;
+    margin-bottom: 10px;
+    line-height: 10px;
+    text-align: center;
+    background:repeating-linear-gradient(18deg, #067506, transparent 1%);
+    
+}
+
+#about h4 span{
+   background-color: white;
+}
+
+#about img{
+    width: 100%;
+    border-radius: 10px;
+}
+
+#about p{
+    margin-top: 10px;
+    font-size: 14px;
+    text-align: justify;
+}
+
+#login{
+   display: block;
+   margin-top: 30px;
+   
+}
+
+#login h4{
+    text-align: center;
+    line-height: 10px;
+    margin-bottom: 20px;
+    background:  repeating-linear-gradient(18deg, #067506, transparent 1%);
+
+}
+
+#login form{
+    padding: 10px;
+}
+#login h4 span {
+   background-color: white;
+}
+
+#login label{
+    font-size: 16px;
+    font-weight: 500;
+    margin-top:10px;
+}
+
+#login form input[type="text"],
+input[type="password"]{
+    width: 80%;
+    margin-top:10px;
+    margin-bottom: 10px;
+    height: 25px;
+    background-color: #f2f2f2;
+    border: 1px solid #ccc;
+    box-shadow: 0px 0px 2px #555;
+    text-align: left;
+    padding-left: 8px;
+    color: black;
+}
+
+#login form input[type="text"]:focus,
+input[type="password"]:focus{
+
+    background-color: #f2f2f2;
+    border: 1px solid #067506;
+    box-shadow: 0px 0px 2px #20613D; 
+}
+
+#login form input[type="submit"]{
+    background-color: #333;
+    cursor: pointer;
+    width: 60px;
+    height: 30px;
+    border: 1px solid #222;
+    color:white;
+    
 }
