--- a/styles/styles.css
+++ b/styles/styles.css
@@ -270,11 +270,14 @@ input[type="password"]{
 }
 
 footer{
-    width: 100%;
-    margin-top: 2px;
+    width: 65%;
+    margin: 0px auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding:20px;
     text-align: center;
     background: #0c2210b3;
-    height: 80px;
+    height: 60px;
     box-shadow: 0px 0px 1px #ccc ;
 }
 
@@ -282,11 +285,12 @@ footer #Author{
     width: 100%;
     padding: 10px;
     font-family:Arial, Helvetica, sans-serif;
-    font-size: 18px;
+    font-size: 14px;
     color: white;
 }
 
 footer #social{
+   
     width: 100%;
     
 }
@@ -335,3 +339,24 @@ footer #Social img{
     cursor: pointer;
 }
 
+#scrollTopButton{
+    display: none;
+    position: fixed;
+    width: 35px;
+    height: 35px;
+    border-radius: 999px;
+    background-color: rgba(0, 0, 0, 0.753);
+    text-align: center;
+    line-height: 35px;
+    top:93%;
+    left:50%;
+    transition: all 300ms;
+    z-index: 1;
+    cursor: pointer;
+}
+
+#scrollTopButton a{
+    text-decoration:  none;
+    font-size: 16px;
+    color: #29ec81; 
+}
