--- a/styles/green.css
+++ b/styles/green.css
@@ -41,3 +41,9 @@ input[type="password"]:focus{
     border: 1px solid #067506;
     box-shadow: 0px 0px 2px #20613D; 
 }
+
+#scrollTopButton a{
+    text-decoration:  none;
+    font-size: 16px;
+    color: #29ec81; 
+}
