--- a/styles/styles.css
+++ b/styles/styles.css
@@ -98,24 +98,26 @@ nav ul{
     list-style: none;
 }
 
-nav ul li{
+   #menu li{
     float: left;
-    padding: 10px;
     transition: all 200ms;
     cursor: pointer;
 }
 
 
 
-nav ul > li > a{
+ #menu a{
+    display: block;
+    padding: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
     font-family: verdana;
     line-height: 30px;
     font-size: 16px;
     letter-spacing: 1px;
     color: white;
     text-decoration: none;
-    padding-left: 20px;
-    padding-right: 20px;  
+    
 }
 
 /*ARTICULOS*/
@@ -138,7 +140,7 @@ nav ul > li > a{
     margin-top: 10px;
 }
 
-.post h2{
+ h2{
     font-family: arial;
     font-size: 24px;
     color: #333;
@@ -195,7 +197,6 @@ nav ul > li > a{
 }
 
 #about h4{
-    margin-top: 50px;
     margin-bottom: 10px;
     line-height: 10px;
     text-align: center; 
@@ -349,4 +350,40 @@ footer #Social img{
     z-index: 1;
     cursor: pointer;
 }
+
+/*in about html */
+#box{
+    margin-top: 10px;
+    float: left;
+    width: 66%;
+    padding-left: 10px;
+}
+
+/*when the tab isn't active*/
+.ui-accordion-header{
+    background-color: #f2f2f2 !important;
+ }
+
+ .ui-accordion .ui-accordion-header {
+    display: block;
+    cursor: pointer;
+    position: relative;
+    margin: 2px 0 0 0;
+    padding: .5em .5em .5em .7em;
+    font-size: 100%;
+    font-family: arial;  
+}
+
+ /*tab active*/
+ .ui-accordion-header-active{
+    background-color: #20613D !important;
+    border-color: #20613D !important;
+    
+ }
+
+
+
+
+
+
 
