--- a/styles/styles.css
+++ b/styles/styles.css
@@ -381,6 +381,17 @@ footer #Social img{
     
  }
 
+ /*reloj html design*/
+ #reloj{
+     display: block;
+     width: 50%;
+     margin: 0px auto;
+     height: 60px;
+     border: 3px dashed black;
+     font-family: helvetica;
+     font-size: 30px;
+     text-align: center;
+ }
 
 
 
